--- a/assets/css/wallet.css
+++ b/assets/css/wallet.css
@@ -497,6 +497,8 @@ body {
     max-height: 100vh;
     /* overflow: auto;  */
     background-color: rgba(0,0,0,0.5);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 
 .crypto-modal-content {
